# STAI-tuned

./: .gitignore  README.md  requirements-test.txt  requirements.txt  setup.cfg
.github/workflows/: test_and_merge.yml
src/stuned/: gsheet_batch_updater.py  job.py
src/stuned/local_datasets/utils/: __init__.py  _utils.py
src/stuned/run_from_csv/: __init__.py  __main__.py  command_builder.py  config_processor.py  job_monitor.py.backup  job_submission.py  slurm_utils.py
src/stuned/utility/configs/: __init__.py
src/stuned/utility/helpers_for_main/: __init__.py
src/stuned/utility/imports/: __init__.py
src/stuned/utility/logger/: __init__.py  _logger.py
src/stuned/utility/utils/: __init__.py  _utils.py
tests/: test_main.py
