[metadata]
name = stuned
version = 1.0.1
author = Alexander Rubinstein
author_email = rubalex14@gmail.com
description = Utility code from STAI (https://scalabletrustworthyai.github.io/)
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/AlexanderRubinstein/STAI-tuned
project_urls =
    Bug Tracker = https://github.com/AlexanderRubinstein/STAI-tuned/issues
    repository = https://github.com/AlexanderRubinstein/STAI-tuned
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    stnd @ git+https://github.com/arubique/stnd.git
    torch>=1.13.1
    deepdiff>=5.8.1
    watchdog>=3.0.0
    matplotlib>=3.5.3
    gdown>=4.5.1
    torchvision>=0.14.1
    datasets>=3.6.0

[options.packages.find]
where = src
